Fix how content overflow is handled
Instead of overriding it on every element on its own, set up text
overflow on the article itself.

--- a/src/furo/assets/styles/_scaffold.sass
+++ b/src/furo/assets/styles/_scaffold.sass
@@ -47,6 +47,7 @@ body
 article
   color: var(--color-content-foreground)
   background: var(--color-content-background)
+  overflow-wrap: break-word
 
 .page
   display: flex
