--- a/src/furo/assets/styles/content/_api.sass
+++ b/src/furo/assets/styles/content/_api.sass
@@ -68,10 +68,6 @@ dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary):not(.
       font-weight: normal
       width: 3.5rem
 
-  // Break words when they're too long
-  span.pre
-    overflow-wrap: anywhere
-
 em.property
   font-style: normal
   &:first-child
